--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -13,7 +13,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(265px, 1fr));
   column-gap: 30px;
-  row-gap: 60px;
+  row-gap: 58px;
 }
 
 .movies-card-list_less-then-three {
