--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -1,6 +1,7 @@
 .saved-movies {
   width: 100%;
   max-width: 1280px;
+  min-height: 100vh;
   padding: 0 70px;
   box-sizing: border-box;
   display: flex;
